prevent scrolling on mobile

--- a/style.css
+++ b/style.css
@@ -1,6 +1,11 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500&display=swap");
 @import url("https://fonts.googleapis.com/css?family=Amatic+SC");
 
+html,
+body {
+  overscroll-behavior-y: contain;
+}
+
 body {
   margin: 0;
   overflow: hidden;
